welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value compt
  var compt.Int = 0
      ^arrayCount9:4: error: not found: value compt
    if (nums(i) == 9) {compt = compt + 1}
                       ^arrayCount9:6: error: not found: value compt
  return compt
         ^